# SPHARM_Mech-Project

./: CMakeLists.txt  README.md  main.cpp  simgast.cpp  simgast.h  simgast.qrc  simgast.ui
MACOSXBinary/: ico2.tri  ico3.tri  ico4.tri  ico5.tri  uni10k.tri  uni900.tri  vfi_result_50k.shp3
MACOSXBinary/test_shapes/: Result_after_3_h_Fly_embryo_Berkeley_stage5_last_Lmax80_with_dorsal_L56.shp3  resulting_vector_flow_field.fig
matlab_code/: compare_two_shp3_surfaces.m  plot_difference.m  vfi_result.shp3
matlab_code/@sh_basis/: N_LK_bosh.m  N_LK_nocs.m  gaussquad.m  sh_basis.m  ylk_bosh.m  ylk_cos_sin.m  ylk_cos_sin_bosh.m  ylk_cos_sin_dphi_bosh.m  ylk_cos_sin_dphiphi_bosh.m  ylk_cos_sin_dtheta_bosh.asv  ylk_cos_sin_dtheta_bosh.m  ylk_cos_sin_dthetaphi_bosh.m  ylk_cos_sin_dthetatheta_bosh.m
matlab_code/@sh_surface/: X_o_basic_flower_5.mat  X_o_basic_flower_9.mat  X_o_discocyte.mat  X_o_elliptocyte_01.mat  X_o_plectrum.mat  X_o_sheet.mat  bosh2nocs_xc.asv  bosh2nocs_xc.m  cs2nocs_xc.m  get_L_max_xc.m  get_mesh.asv  get_mesh.m  import_from_cos_matrix.m  indices_gen.m  nocs2bosh_xc.m  nocs2cs_xc.m  plot_cos_view.m  plot_globe.m  sh_rot.m  sh_surface.m  shp_sphere_gen.m  shp_volume_block.m  shp_volume_gen_single.m  tr.m  tr_xc.m  update.m
matlab_code/@shp_surface/: DATA_self_nico_2.mat  DATA_self_nico_3.mat  X_o_blob1.mat  X_o_bowling_pin.mat  X_o_capsule_01.mat  X_o_disc.mat  X_o_duckpin.mat  X_o_dumbbel_01.mat  X_o_echinocyte_01.mat  X_o_echinocyte_02.mat  X_o_elliptic_bowl.mat  X_o_elliptocyte_02.mat  X_o_paddle.mat  X_o_s1.mat  X_o_sphere.mat  X_o_stomatocyte_01.mat  (+49 more)
(+243 files in other folders)
